feat(core): log plugin scanner result